Added community search
